fixed use columnGap instead of rowGap made the grid background transparent

--- a/src/components/Grid/Grid.st.css
+++ b/src/components/Grid/Grid.st.css
@@ -22,6 +22,7 @@
     max-width: max-content;
     margin: 0 auto;
     overflow: hidden;
+    background-color: transparent;
 }
 
 .root:dividers,
